--- a/Endabgabe.ipynb
+++ b/Endabgabe.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Endabgabe.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOo/zLRqK4PudTiwijutQHn",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyO9Y7qjsLPgpDKUuqQu/r+Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +24,28 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/gamzef/INF003/blob/master/Endabgabe.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wJe59wBYrW1a",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#As stated in the description, the data for this competition comes from a experimental set-up used to study earthquake physics. \n",
+        "#Our goal is to predict the time remaining before the next laboratory earthquake. \n",
+        "#The only feature we have is the seismic signal (acoustic data), which is recorded using a piezoceramic sensor and corresponds to the voltage upon deformation (in integers).\n",
+        "#Training data: single, continuous segment of experimental data.\n",
+        "\n",
+        "#Test data: consists of a folder containing many small segments. The data within each test file is continuous, but the test files do not represent a continuous segment of the experiment.\n",
+        "\n",
+        "#Both the training and the testing set come from the same experiment.\n",
+        "\n",
+        "#There is no overlap between the training and testing sets."
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -381,7 +404,7 @@
       },
       "source": [
         "rows = 150000\n",
-        "segments = int(np.floor(train_data.shape[0] / rows))\n",
+        "segments = int(np.floor(train_data.shape[0] / rows))  #6 milyon / 150000 = 4194\n",
         "\n",
         "X_train = pd.DataFrame(index = range(segments),dtype = np.float32,columns = ['mean','std','99quat','50quat','25quat','1quat'])\n",
         "y_train = pd.DataFrame(index = range(segments),dtype = np.float32,columns = ['time_to_failure'])"
@@ -421,6 +444,118 @@
             "100%|██████████| 4194/4194 [00:42<00:00, 99.17it/s]\n"
           ],
           "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WQB-HRtts4TS",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 195
+        },
+        "outputId": "79daec59-ebb1-4997-908b-6c22947c6998"
+      },
+      "source": [
+        "X_train.head()"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>mean</th>\n",
+              "      <th>std</th>\n",
+              "      <th>99quat</th>\n",
+              "      <th>50quat</th>\n",
+              "      <th>25quat</th>\n",
+              "      <th>1quat</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>4.884113311767578</td>\n",
+              "      <td>5.101089000701904</td>\n",
+              "      <td>18.0</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>-8.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>4.725766658782959</td>\n",
+              "      <td>6.588801860809326</td>\n",
+              "      <td>21.0</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>-11.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>4.906393527984619</td>\n",
+              "      <td>6.967373847961426</td>\n",
+              "      <td>26.0</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>-15.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>4.902239799499512</td>\n",
+              "      <td>6.922282218933105</td>\n",
+              "      <td>22.0</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>-12.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>4.908720016479492</td>\n",
+              "      <td>7.301085948944092</td>\n",
+              "      <td>26.0</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>-15.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                mean                std  99quat  50quat  25quat  1quat\n",
+              "0  4.884113311767578  5.101089000701904    18.0     5.0     3.0   -8.0\n",
+              "1  4.725766658782959  6.588801860809326    21.0     5.0     2.0  -11.0\n",
+              "2  4.906393527984619  6.967373847961426    26.0     5.0     2.0  -15.0\n",
+              "3  4.902239799499512  6.922282218933105    22.0     5.0     2.0  -12.0\n",
+              "4  4.908720016479492  7.301085948944092    26.0     5.0     2.0  -15.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
         }
       ]
     },
